@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2747 2012/09/01 09:20:32 adam Exp $
+$NetBSD: CHANGES-2012,v 1.2748 2012/09/01 09:35:01 cheusov Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -4275,3 +4275,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Added editors/gedit3-spell version 3.4.2 [prlw1 2012-08-31]
 	Updated graphics/optipng to 0.7.2 [adam 2012-09-01]
 	Updated pkgtools/pkg_summary-utils to 0.58.3 [cheusov 2012-09-01]
+	Updated pkgtools/pkg_chk to 2.0.6 [abs 2012-09-01]
